[package]
name = "dinput8"
version = "0.5.0"
edition = "2021"
authors = ["Progre"]

[lib]
crate-type = ['cdylib']

[build-dependencies]
winres = "0.1"

[dependencies]
encoding_rs = "0.8.31"
windows = { version = "0.58.0", features = [
    "implement",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Foundation",
    "Win32_Media_Multimedia",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
] }
windows-core = "0.58.0"

[package.metadata.winres]
LegalCopyright = "© Progre"
ProductName = "thpovdpad"
FileDescription = "https://github.com/progre/thpovdpad/"
